--- a/resume.html
+++ b/resume.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link href="css/styles2.css" rel="stylesheet" type="text/css" media="all">
     <meta charset="utf-8">
     <title>Resume Site</title>
   </head>
   <body>
     <h2>Resume</h2>
+    <div class="contact">
+      <p>Alondra Daisy</p>
+      <p>Email: alondra.warren96@gmail.com</p>
+      <p>Phone number: 760-xxx-xxxx</p>
+  </div>
     <h4>Education</h4>
     <ol>
       <li>Portland State University</li>
       <li>Skillcrush</li>
       <li>Epicodus</li>
+    </ol>
     <h4>Work Experience</h4>
     <ul>
-      <li>Photographer for Coachella Music and Arts Festival</li>
-      <li>Palm Springs Life Magazine Contributor</li>
-      <li>PA</li>
+      <li><span class="keywords">Photographer</span> for Coachella Music and Arts Festival</li>
+      <li>Palm Springs Life Magazine <span class="keywords">Contributor</span>
+      </li>
+      <li><span class="keywords">PA</span></li>
+    </ul>
     <h4>Skills</h4>
+
     <ul>
       <li>Organized</li>
       <li>Strong communication</li>
